--- a/pom.xml
+++ b/pom.xml
@@ -127,8 +127,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -318,6 +318,11 @@
 			<groupId>com.googlecode.json-simple</groupId>
 			<artifactId>json-simple</artifactId>
 			<version>1.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.hcl</groupId>
+			<artifactId>pdf-common</artifactId>
+			<version>1.0.4-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
